1999-02-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm (addNode): Added 'after' parameters so addNode can
	draw itself the arrows.

1999-02-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm (addNode): coordinate are now handled by the 
	object

1999-01-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : fixed shortCut and unselectNodes problems
	  added comments on internal data structures

1999-01-22  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : better doc

1999-01-15  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm : doc update 

1999-01-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* TreeGraph.pm: first version
	
