@@ -1,3 +1,10 @@
+1999-04-21  Dominique Dumont  <domi@barrayar.grenoble.hp.com> v1.011
+
+	* TreeGraph.pm : 
+	- added nodeTag option
+	- relaxed rules about shortcuts
+	- some bug fixes provided by Bernard Weiler (Thanks !)
+
 1999-02-12  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* TreeGraph.pm (addNode): Added 'after' parameters so addNode can
